# autohell-o-world

./: LICENSE.md  README.md  config.status  configure  configure.ac  makefile  makefile.am  makefile.in
autom4te.cache/: output.0  requests  traces.0  traces.1
my_inc/: makefile  makefile.am  makefile.in  myadd.h
my_inc/.deps/: myadd.Po
src/: helper.cpp  helper.h  main  main.cpp  makefile  makefile.am  makefile.in
src/.deps/: main.Po
