# Initialize autoconf and automake
# AC = autoconf, AM = automake
AC_INIT([autohell-o-world], [0.1])
AM_INIT_AUTOMAKE

# Use libraries
AC_PROG_RANLIB

# Make sure C++ compiler is installed
AC_LANG([C++])

# Set the C++ compiler
AC_PROG_CXX

AC_CONFIG_FILES([makefile my_inc/makefile src/makefile])

# Create configure script
AC_OUTPUT

